Nav-bar changes so that when the screen is smaller the layout is changed to avoid elements going out of the screen

--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -12,6 +12,7 @@ h2, .name-timeline {
   flex-direction: row;
   justify-content: center;
   gap: 5px;
+  width: 120px;
   align-items: center;
   cursor: pointer;
 }
@@ -97,13 +98,13 @@ h2, .name-timeline {
 }
 
 #navbutton{
-  padding: 0;
+  padding-right: 10px;
   display: flex;
   flex-direction:row;
   justify-content: flex-start;
   align-items:center;
   background-color:transparent;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 #defaultMessage{
@@ -234,7 +235,6 @@ nav {
   border-bottom: 2px solid #4b1515;
   border-top: 2px solid #4b1515;
   z-index: 5;
-
 }
 
 
@@ -250,16 +250,22 @@ nav {
 .nav-tags {
   display: flex;
   flex-direction: row;
-  gap: 20px;
   margin-left: 20px;
   height: 50px;
   align-items: center;
+  font-size: 14px;
+  gap: 5px;
 }
 
 .nav-arrow {
   border-radius: 100px;
   flex-direction: row;
   align-items: center;
+}
+
+#notActive{
+  background-color: rgba(0, 0, 0, 0.629);
+  cursor:initial;
 }
 
 #left, #right {
@@ -287,6 +293,34 @@ nav {
   width: 200px;
   background: white;
   list-style-type: none;
+}
+
+@media only screen and ( max-width: 730px ){
+  .navigation{
+    position: absolute; 
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    top: 50px;
+    background-color: gray;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-style: solid;
+    border-top-style: none;
+  }
+  nav{
+    justify-content: center;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .nav-tags{
+    justify-content: space-between;
+    width: 100%;
+    margin-left: 30px;
+    margin-right: 30px;
+
+  }
 }
 
 .pagelist li {
